--- a/tmux.conf
+++ b/tmux.conf
@@ -14,3 +14,6 @@ bind - split-window -v
 
 # vi keybind
 setw -g mode-keys vi
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T vi-copy Enter send-keys -X copy-pipe-and-cancel "pbcopy"
