--- a/fedora_tmux.conf
+++ b/fedora_tmux.conf
@@ -17,3 +17,8 @@ setw -g mode-keys vi
 
 # reload config file
 bind r source-file ~/.tmux.conf \; display ".tmux.conf reloaded!"
+
+# copy
+bind -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
